--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,8 @@
 # Go
+- task: SynopsysPolaris@1
+  inputs:
+    polarisCommand: 'analyze -w'
+    waitForIssues: true
 # Build your Go project.
 # Add steps that test, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/go
